# demregpy

./: .gitignore  .pre-commit-config.yaml  LICENSE.rst  README.md  README.rst  aia_V8_20171210_050627_response_table.txt  aia_calibrate.py  aia_calibrate.txt  batch_cluster.py  batch_dem_jp2.py  dem2jp2.py  dem_class.py  dem_inv_gsvd.py  dem_inv_gsvdcsq.py  dem_reg_map.py  demmap_pos.py  dn2dem_pos.py  dn2dem_pos_nb.py  dn2dem_pos_selfnorm.py  doubledem.py  pyproject.toml  setup.cfg  setup.py  test.py  tests.py  workspace.code-workspace
.github/workflows/: publish.yml  python-publish.yml  workflow.yml
demregpy/: __init__.py  demmap.py  dn2dem.py  tresp.py
demregpy/examples/: testing_new.ipynb
demregpy/tests/: test_demregpy.py
test/: AIA20140101_0000_0094.fits  AIA20140101_0000_0131.fits  AIA20140101_0000_0171.fits  AIA20140101_0000_0193.fits  AIA20140101_0000_0211.fits  AIA20140101_0000_0335.fits
