[build-system]
requires = ['setuptools>=60', 'wheel', 'setuptools_scm[toml]>=3.4']
build-backend = 'setuptools.build_meta'

[project]
name = "demregpy"
dynamic = ["version"]

[tool.setuptools_scm]
write_to = 'demregpy/_version.py'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = "."