[metadata]
name = demregpy
version = 0.6.2
author = Alasdair Wilson
author_email = alasdair.wlsn@gmail.com
license = MIT
description = DEM Regularised Inversion Calculation in Python (Hannah & Kontar 2012)
url = https://github.com/alasdairwilson/demregpy
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
use_scm_version=True
install_requires = 
                    numpy>1.23.0
                    tqdm>=4.0.0
                    threadpoolctl>=3.0.0
include_package_data = True
python_requires = >=3.6

[options.packages.find]
where=demregpy
